<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- About Us Activity -->
    <string name="about_us_activity_name">Acerca de Nosotros</string>
    <string name="development_semester_text_view">2014/1</string>
    <string name="project_name_text_view">Proyecto Integrador I</string>
    <string name="professor_full_names_text_view">Juan Fernando Franco Higuita</string>
    <string name="professor_title_text_view">Tutor:</string>
    <string name="students_full_names_text_view">Andersson García Sotelo\nMiguel Ángel Ossa Ruiz\nNeiber de Jesús Padierna Pérez</string>
    <string name="students_title_text_view">Desarrolladores:</string>
    <string name="university_name_text_view">Universidad de Antioquia</string>

    <!-- Base Album Directory -->
    <string name="album_blackwhite_exams_name">black_white</string>
    <string name="album_exams_name">exams</string>
    <string name="album_processed_exams_name">processed</string>
    <string name="album_root_name">OMRGrader</string>
    <string name="album_references_name">references</string>
    <string name="album_templates_name">templates</string>
    <string name="album_temp_name">temp</string>
    <string name="album_tests_name">tests</string>

    <!-- Exam Result List Activity -->
    <string name="exam_result_list_activity_name">Resultados Obtenidos</string>
    <string name="correct_answers_amout_message_text_view">Correctas:</string>
    <string name="final_grade_message_text_view">Nota Final:</string>
    <string name="no_exam_grader_session_found_message_alert_dialog">Ha surgido un error grave en la Sesión de Calificación lo cual obliga a no poder continuar. Por favor, intente de nuevo.</string>
    <string name="no_exam_grader_session_found_message_title_dialog">Erro Grave en la Sesión</string>

    <string-array name="answers_options_text">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
    </string-array>

    <!-- Global Application's Strings -->
    <string name="accept_button">Aceptar</string>
    <string name="application_name">OMR Grader</string>
    <string name="cancel_button">Cancelar</string>
    <string name="pictures_prefix">.jpg</string>

    <!-- Grader Settings Preference Activity -->
    <string name="grader_settings_preference_activity_name">Configuraciones</string>
    <string name="grader_settings_preference_default_maximum_grade">5.0</string>
    <string name="grader_settings_preference_exam_processing_category_title">Procesamiento de Exámenes</string>
    <string name="grader_settings_preference_exam_session_category_title">Sesión de Calificación</string>
    <string name="grader_settings_preference_maximum_grade_dialog_title">Máximo Valor para la Nota</string>
    <string name="grader_settings_preference_maximum_grade_key">maximumGrade</string>
    <string name="grader_settings_preference_maximum_grade_summary">Valor máximo para la nota establecida para las sesiones de calificación.</string>
    <string name="grader_settings_preference_maximum_grade_title">Máximo Valor para la Nota</string>
    <string name="grader_settings_preference_radius_lenght_dialog_message">Ingrese el valor que desea establecer como longitud del Radio para las burbujas de las respuestas:</string>
    <string name="grader_settings_preference_radius_lenght_dialog_title">Longitud del Radio</string>
    <string name="grader_settings_preference_radius_lenght_key">radiusLenght</string>
    <string name="grader_settings_preference_radius_lenght_summary">Valor para establer la longitud del radio en píxeles para las burbujas de las respuestas.</string>
    <string name="grader_settings_preference_radius_lenght_title">Longitud del Radio</string>
    <string name="grader_settings_preference_minimum_thresh_dialog_message">Ingrese el valor que desea establecer como mínimo Umbral para las burbujas de las respuestas seleccionadas:</string>
    <string name="grader_settings_preference_minimum_thresh_dialog_title">Mínimo Valor del Umbral</string>
    <string name="grader_settings_preference_minimum_thresh_key">minimumThresh</string>
    <string name="grader_settings_preference_minimum_thresh_summary">Valor para establer el umbral mínimo en píxeles para las burbujas de las respuestas seleccionadas.</string>
    <string name="grader_settings_preference_minimum_thresh_title">Mínimo Valor del Umbral</string>

    <!-- Grader Settings Preference Fragment -->
    <string name="bad_radius_lenght_value_message_alert_dialog">El nuevo valor especificado para la longitud de Radio es demasiado pequeño, grande o no es aceptable.\n\nEl valor será restaurado al valor por defecto.</string>
    <string name="bad_radius_lenght_value_title_alert_dialog">Longitud de Radio No Aceptable</string>
    <string name="bad_thresh_value_message_alert_dialog">El nuevo valor especificado para el Umbral es demasiado pequeño, grande o no es aceptable.\n\nEl valor será restaurado al valor por defecto.</string>
    <string name="bad_thresh_value_title_alert_dialog">Umbral No Aceptable</string>

    <string-array name="grader_settings_preferences_array_key">
        <item>5.0</item>
        <item>10.0</item>
        <item>50.0</item>
        <item>100.0</item>
    </string-array>

    <!-- Input Reference Name Dialog Fragment -->
    <string name="main_text_dialog_fragment">Por favor, ingrese el nombre con el cual desea guardar el nuevo Examen de Referencia:</string>
    <string name="main_title_dialog_fragment">Ingresar Nuevo Nombre</string>

    <!-- Main Session Fragment Activity -->
    <string name="new_grader_session_button">Calificar Nueva Sesión de Exámenes</string>
    <string name="new_reference_template_button">Capturar Nuevo Examen de Referencia</string>
    <string name="no_reference_exam_taken_message_alert_dialog">No se ha podido procesar exitosamente la operación para tomar un nuevo Examen de Referencia.\nPor favor, intente de nuevo.</string>
    <string name="no_reference_exam_taken_title_alert_dialog">Toma de Examen Falalda</string>
    <string name="reference_exam_guide_first_step_text_view">1. Dar clic en el botón: Capturar Nuevo Examen de Referencia.</string>
    <string name="reference_exam_guide_second_step_text_view">2. Ingresar el nombre apropiado para el nuevo examen.</string>
    <string name="reference_exam_guide_third_step_text_view">3. Capturar con la cámara el nuevo Examen de Referencia.</string>
    <string name="reference_exam_guide_tittle_text_view">Exámanes de Referencia</string>
    <string name="student_exam_guide_first_step_text_view">1. Dar clic en el botón: Calificar Nueva Sesión de Exámenes.</string>
    <string name="student_exam_guide_second_step_text_view">2. Seleccionar del listado que se despliega el Examen de Referencia a utilizar.</string>
    <string name="student_exam_guide_third_step_text_view">3. Esperar a que el programa procese exitosamente el Examen de Referencia seleccionado.</string>
    <string name="student_exam_guide_fourth_step_text_view">4. Capturar con la cámara el Examen del Estudiante que se desea evaluar.</string>
    <string name="student_exam_guide_fifth_step_text_view">5. Esperar a que el programa procese exitosamente el nuevo Examen del Estudiante.</string>
    <string name="student_exam_guide_sixth_step_text_view">6. Observar la tabla de resultados obtenidos durante la sesión de calificación.</string>
    <string name="student_exam_guide_tittle_text_view">Exámanes de Estudiantes</string>

    <!-- Menu Main Session Activity -->
    <string name="about_us_main_session_menu_item">Acerca de Nosotros</string>
    <string name="grader_settings_main_session_menu_item">Configuración</string>

    <!-- Reference Exam List Activity -->
    <string name="empty_reference_exam_list">No Hay Exámenes de Referencia</string>
    <string name="error_founding_reference_exams_message_alert_dialog">Un error ha surgido mientras se consultaban los Exámenes de Referencia guardados previamente.\nPor favor, intente de nuevo.</string>
    <string name="error_founding_reference_exams_title_alert_dialog">Error Recuperando Exámenes</string>
    <string name="error_taking_reference_exam_message_alert_dialog">Un error ha surgido mientras trataba de capturar el nuevo Examen de Referencia a ser guardado.\nPor favor, intente de nuevo.</string>
    <string name="error_taking_reference_exam_title_alert_dialog">Error Capturando Examen</string>
    <string name="header_title_description">Por favor, seleccione alguno de los elementos de la lista:</string>
    <string name="reference_exam_list_activity_name">Exámenes de Referencia</string>

    <!-- Starter Configuration Activity -->
    <string name="no_cameras_message_alert_dialog">No hay ninguna aplicación de Cámara instalada en el sistema.\n\nLa aplicación se cerrará.</string>
    <string name="no_cameras_title_alert_dialog">Sin Cámara</string>
    <string name="no_copied_resources_message_alert_dialog">No se han podido copiar al dispositivo todos los recursos necesarios para el funcionamiento del aplicativo.\n\nLa aplicación se cerrará.</string>
    <string name="no_copied_resources_title_alert_dialog">Recursos No Copiados</string>
    <string name="no_created_directories_message_alert_dialog">No se han podido crear los directorios necesarios.\n\nLa aplicación se cerrará.</string>
    <string name="no_created_directories_title_alert_dialog">Problema en Directorios</string>
    <string name="no_found_libraries_message_alert_dialog">No se han encontrado los recursos necesarios de OpenCV para el funcionamiento del aplicativo.\n\nLa aplicación se cerrará.</string>
    <string name="no_found_libraries_title_alert_dialog">Sin Librerías OpenCV</string>

    <!-- Student Exam Catcher Activity -->
    <string name="default_base_student_exam_name">StudentExam</string>
    <string name="error_processing_reference_exam_message_alert_dialog">Un grave error ha surgido procesando el Examen de Referencia, y no se ha podido completar la tarea.\nPor favor, intente de nuevo.</string>
    <string name="error_processing_reference_exam_title_alert_dialog">Error Proesando Examen</string>
    <string name="error_processing_student_exam_message_alert_dialog">Un grave error ha surgido procesando el Examen del Estudiante, y no se ha podido completar la tarea.\nPor favor, intente de nuevo.</string>
    <string name="error_processing_student_exam_title_alert_dialog">Error Procesando Examen</string>
    <string name="error_taking_student_exam_message_alert_dialog">Un error grave ha surgido mientras se intentaba tomar el Examen de Estudiante. Por favor, intente de nuevo.</string>
    <string name="error_taking_student_exam_title_alert_dialog">Error Tomando Exámen de Estudiante</string>
    <string name="no_reference_exam_name_found_message_alert_dialog">El nombre o ruta absoluta del Examen de Referencia no es válida o posee problemas y el archivo no se puede acceder.\nPor favor, intente con otro examen.</string>
    <string name="no_reference_exam_name_found_title_alert_dialog">Nombre del Examen de Referencia</string>
    <string name="reference_exam_processing_message_progress_dialog">Procesando el Examen de Referencia seleccionado para la sesión de calificación#8230;</string>
    <string name="reference_exam_processing_title_progress_dialog">Examen de Referencia</string>
    <string name="student_exam_processing_message_progress_dialog">Procesando el Examen del Estudiante tomado para ser calificado durante la sesión#8230;</string>
    <string name="student_exam_processing_title_progress_dialog">Examen de Estudiante</string>

</resources>